--- a/style.css/kalender.css
+++ b/style.css/kalender.css
@@ -95,7 +95,7 @@ header .navbar ul li ul {
 
 
 header .navbar ul li ul li a{
-    padding: 35px; 
+    margin: 20px -20px;
     font-size: 30px;
     font-weight: 600;
     color: var(--primary-color);
