--- a/style.css/oensk.css
+++ b/style.css/oensk.css
@@ -37,7 +37,7 @@ h1 {
     text-align: center;
     margin-top: 350px;
     color: var(--primary-color);
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 p {
@@ -190,7 +190,7 @@ header .navbar ul li ul {
 
 
 header .navbar ul li ul li a{
-    padding: 35px; 
+    margin: 20px -20px;
     font-size: 30px;
     font-weight: 600;
     color: var(--primary-color);
