--- a/style.css/info.css
+++ b/style.css/info.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 775vh;
+    height: 975vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -46,19 +46,27 @@ h1 {
 
 
 p {
-   text-align: center;
-   margin: 20px 80px;
-   font-size: 1.2rem;
+   text-align: start;
+   margin: 40px 80px;
+   font-size: 1.5rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .info iframe {
     border-radius: 8px;
+    
 }
 
 
 h2 {
     text-align: center;
+    color: var(--primary-color);
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+h3 {
+    text-align: start;
     color: var(--primary-color);
     font-size: 3rem;
     margin-bottom: 10px;
@@ -87,6 +95,7 @@ h2 {
     width: 20%;
     height: auto;
    align-items: center;
+   margin-bottom: 20px;
 }
 
 #ikon4 {
@@ -102,7 +111,6 @@ article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px 20px;
     padding-bottom: 100px;
 }
 
