--- a/style.css/info.css
+++ b/style.css/info.css
@@ -47,7 +47,7 @@ h1 {
 
 p {
    text-align: start;
-   margin: 40px 80px;
+   margin: 40px 90px;
    font-size: 1.5rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -68,8 +68,12 @@ h2 {
 h3 {
     text-align: start;
     color: var(--primary-color);
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin-bottom: 10px;
+}
+
+#person p {
+    margin: 20px 0;
 }
 
 .ikoner {
@@ -111,6 +115,7 @@ article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     padding-bottom: 100px;
 }
 
