--- a/style.css/info.css
+++ b/style.css/info.css
@@ -48,20 +48,18 @@ h1 {
 p {
    text-align: start;
    margin: 40px 90px;
+   line-height: 2rem;
    font-size: 1.5rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.info iframe {
-    border-radius: 8px;
-    
-}
+
 
 
 h2 {
     text-align: center;
     color: var(--primary-color);
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom: 10px;
 }
 
@@ -72,9 +70,7 @@ h3 {
     margin-bottom: 10px;
 }
 
-#person p {
-    margin: 20px 0;
-}
+
 
 .ikoner {
    display: grid;
@@ -84,7 +80,7 @@ h3 {
    gap: 55px;
    width: 50%;
    margin: 0 auto;
-   margin-bottom: 100px;
+   margin-bottom: 200px;
    border-bottom: 2px solid var(--primary-color);
 }
 
@@ -115,8 +111,7 @@ article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 #barkort {
