--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -18,7 +18,7 @@ body {
     background-color: black;
     height: 100vh;
     font-size: 2rem;
-    font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -118,6 +118,7 @@ h1 {
     margin-top: 800px;
     color: var(--primary-color);
     font-size: 5rem;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 p {
@@ -129,11 +130,13 @@ h2 {
     text-align: start;
     color: var(--primary-color);
     font-size: 3rem;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
     
 }
 
 form h2 {
     margin-top: 30px;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 #instaskrift {
