--- a/style.css/info.css
+++ b/style.css/info.css
@@ -42,6 +42,7 @@ h1 {
     margin-top: 350px;
     color: var(--primary-color);
     font-size: 4rem;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 
@@ -61,6 +62,7 @@ h2 {
     color: var(--primary-color);
     font-size: 4rem;
     margin-bottom: 10px;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 h3 {
@@ -68,6 +70,7 @@ h3 {
     color: var(--primary-color);
     font-size: 2.5rem;
     margin-bottom: 10px;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 
