--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 380vh;
+    height: 680vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -90,7 +90,7 @@ p a {
     color: var(--secondary-color);
     font-size: 4rem;
     font-weight: 600;
-    margin: 100px 0;
+    margin: 50px 0 0 0;
     border: 2px solid var(--secondary-color-color);
     height: auto;
     font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
@@ -104,15 +104,6 @@ p a {
 }
 
 
-h5 {
-    text-align: center;
-    margin: 50px 310px;
-    color: var(--secondary-color);
-    font-size: 2rem;
-    font-weight: 600;
-    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
-   
-}
 
 
 .konkurrence {
@@ -120,20 +111,28 @@ h5 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 15px;
-}
-.konkurrence img {
-    height: auto;
-    width: 60%;
-    border: 5px solid var(--primary-color);
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    padding: 0 10px; 
+
 }
 
-.konkurrence a{
-    
+.konkurrence img {
+    width: 60%;
+    height: auto;
+    margin: 20px;
+
+}
+
+.konkurrence h5 {
     color: var(--secondary-color);
     font-size: 2rem;
     font-weight: 600;
-    text-align: center;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    text-align: start;
+    margin: 10px 150px;
+   
 }
 
 
