--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 680vh;
+    height: 500vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -34,6 +34,7 @@ h2 {
     font-size: 3rem;
     margin-top: 30px;
     font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    font-weight: 600;
 }
 
 h5 {
@@ -42,6 +43,7 @@ h5 {
         font-size: 3rem;
         margin-top: 30px;
         font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        font-weight: 600;
 }
 
 p {
@@ -50,12 +52,14 @@ p {
     margin-top: 350px;
     margin-left: 360px;
     font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    
 }
 
 h6 {
     text-align: start;
     font-size: 1.7rem;
-    margin: 20px 500px;
+    margin: 20px 60px;
+    font-weight: 500;
 }
 
 p a {
@@ -99,7 +103,7 @@ p a {
 .spotify a{
     text-decoration: none;
     color: #000;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
     margin-bottom: 50px;
     font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
@@ -118,7 +122,7 @@ p a {
 }
 
 .billet a {
-
+    text-decoration: none;
     color: var(--primary-color);
 }
 
@@ -148,10 +152,10 @@ p a {
     color: #000;
     font-size: 2rem;
     font-weight: 600;
-    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    font-family: sans-serif;
     text-align: start;
-    margin: 10px 150px;
-   
+    margin: 0px 100px 30px 100px;
+    font-weight: 600;
 }
 
 
