--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 500vh;
+    height: 580vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -158,7 +158,24 @@ p a {
     font-weight: 600;
 }
 
+.ungskab-ns {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
+.ungskab-ns img {
+    width: 70%;
+    height: auto;
+}
+
+.ungskab-ns figcaption {
+    text-align: start;
+    margin: 5px;
+}
 /*Navbarrens redigering*/
 header .navbar ul {
     list-style-type: none;
