--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -148,6 +148,11 @@ main {
     margin: 20px 100px;
 }
 
+section.nyhedsb {
+    margin-top: 35px;
+}
+
+
 /*Navbarrens redigering*/
 header .navbar ul {
     list-style-type: none;
@@ -155,10 +160,6 @@ header .navbar ul {
     flex-direction: row;
     justify-content: space-around;
     
-}
-
-section.nyhedsb {
-    margin-top: 35px;
 }
 
 header .navbar ul li {
@@ -226,7 +227,7 @@ header .navbar ul li:hover > ul {
     display: none;
 }
 
-header label {
+label[for="menu-bar"]  {
     font-size: 20px;
     color: #333;
     cursor: pointer;
@@ -303,6 +304,8 @@ header label {
         color: var(--primary-color);
         text-align: start;
         font-size: 1.7rem;
+        margin: 20px 0;
+        font-weight: 500;
     }
     .billede2 img {
         width: 80%;
@@ -335,6 +338,10 @@ header label {
         margin: 10px;
         display: flex;
     }
+    input#betingelser {
+        width: 5%;
+        margin-right: 20px;
+    }
 }
 
 @media (max-width: 809px) {
@@ -354,25 +361,34 @@ header label {
         height: 80vh;
         } 
 
-        main {
-        margin: 20px;
-        }
+       
                 
         header .navbar {
         display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #0040ff;
+        width: 320px;
+        position: absolute;
+        top: 60px;
+        left: 10;
+        box-sizing: border-box;
+
         }
                 
-        header label {
+        label[for="menu-bar"] {
         display: block;
         position: absolute;
+        top: 20px;
+        right: 20px;
         cursor: pointer;      
                 
         }
                 
-        #menu-bar:checked ~ .navbar {
-        display: block;
-        margin-top: 30px;
-        z-index: 100;
+        #menu-bar:checked ~ nav.navbar {
+        display: flex;
+       
        
         }
                 
@@ -382,79 +398,75 @@ header label {
         }
 
         header .navbar ul {
-            list-style-type: none;
-            display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
-            background-color: #0040ff;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             
-           
         }
 
-        header .navbar ul li {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
        
-       
-       
+        header .navbar ul li  {
+            position: relative;
+            width: 100%;
+            
         }
 
         header .navbar ul li a {
             font-size: 2rem;
             font-weight: 600;
-            padding: 21px;
-     
-           
+            padding: 25px;
+            text-align: center;
+            display: block;
+            box-sizing: border-box;
+            
         }
 
+     
+
         header .navbar ul li ul {
-            position: relative;
-            top: 10%;
-            right: 0%;
-            background: var(--secondary-color);
+            position: static;
             display: none;
-            z-index: 100;
-            padding: 0px;
+            width: 100%;
+            background-color: var(--secondary-color);
+            margin: 0;
+            padding: 0;
         
         }
         
 
         header .navbar ul li a:hover {
-            background: var(--primary-color);
-            color: var(--secondary-color);
-            text-align: center;
+            background:var(--secondary-color);
+            color: var(--primary-color);
+            text-align: start;
+            width: 100%;
+            
         }
 
         
         header .navbar ul li ul li a{
-            font-size: 1.4rem;
-            font-weight: 600;
-            color: var(--secondary-color);
+            text-align: left;
             background-color: var(--primary-color);
-            padding: 20px -10px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            color: var(--secondary-color);
+            margin: 0;
+        
             
           
         }
         
        
         
-        header .navbar ul li:hover > ul {
-            display: block; /* Viser submenuen */
-        
-        }
-        
-        
-        header .navbar ul li:focus-within > ul ,
-        header .navbar ul li:hover > ul {
-            display: block;
-        }
+    header .navbar ul li a:active + ul,
+    header .navbar ul li a:focus + ul {
+        display: block; /* Viser dropdown på klik i mobil */
+       
+    }
+
+    header .navbar ul li:hover > ul {
+        display: none; /* Hover er slået fra i mobilvisning */
+    }
                 
 
     .nyhedsbrev {
@@ -462,19 +474,20 @@ header label {
          }
                     
     form.nyhedsbrev input#email, input#fornavn {
-    display: block;
-    margin-bottom: 35px;
-    width: 200px;
-        }
+        display: block;
+        margin-bottom: 0px;
+        width: 400px;
+    }
                 
                    
 
     input#betingelser {
-    width: 20%;
+        width: 12%;
+        margin-right: 20px;
     }
 
     .nyhedsbrev button {
-    margin-bottom: 17px;
+        margin-top: 0px;
     }
 
     }
@@ -482,33 +495,27 @@ header label {
     @media (max-width: 610px) {
    
       
-        main h1, h2, p{
-            margin: 40px;
-        }
-        .nyhedsbrev {
-            margin: 20px;
+        .footer {
+      
+            margin: 0;
+            padding: 10px;
              }
-                        
-        form.nyhedsbrev input#email, input#fornavn {
-        display: block;
-        margin-bottom: 35px;
-        width: 200px;
-            }
-                    
-                       
-    
-        input#betingelser {
-        width:10%;
-        }
-    
-        .nyhedsbrev button {
-        margin-bottom: 17px;
-        }
-    
-        }
-    
+                         
+             #logo {
+             display: none;
+             }
+                         
+             #adresse {
+             width: 40%;
+             margin-top: -16px;
+             }
+                         
+                         
+             #insta {
+             width: 100%;
+             }
        
-   
+            }
     
  @media (max-width: 478px) {
    
@@ -522,15 +529,25 @@ header label {
         font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     
+    main {
+        margin: 20px 60px;
+    }
     h1 {
-        font-size: 3rem;
+        font-size: 2.7rem;
         margin-top: 0px;
     }
 
     h2, .nyhedsbrev h2 {
         font-size: 2rem;
+        margin-bottom: 0px;
     }
    
+    p {
+        font-size: 1.5rem;
+        font-weight: 450;
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
    
     .nyhedsbrev {
     margin: 10px;
@@ -538,10 +555,10 @@ header label {
                     
         form.nyhedsbrev input#email, input#fornavn {
         display: block;
-        margin-bottom: 35px;
+        margin-bottom: 0px;
         font-weight: bold;
         min-height: 70px;
-        width: 200px;
+        width: 300px;
         text-align: center;
         font-size: 1.1rem;
         border-radius: 10px;
@@ -551,34 +568,35 @@ header label {
                    
 
         input#betingelser {
-        width: 50%;
+        width: 10%;
         }
 
-        .nyhedsbrev button {
-        margin-bottom: 17px;
+        .betingelser p {
+            font-size: 1rem;
+            margin: 10px 0px;
         }
 
-        .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        border-top: 2px solid var(--primary-color);
+        #instaskrift {
+            margin-top: 100px;
+            margin-bottom: 0;
         }
-                    
-        #logo {
-        display: none;
+
+       
+
+        section.instagram {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+            text-align: center;
         }
-                    
-        #adresse {
-        width: 30%;
-        margin-bottom: -5px;
+        .instagram img {
+            width: 80%;
+            height: auto;
+            margin-top: 40px;
         }
-                    
-                    
-        #insta {
-        width: 100%;
-        }
-                
+    
         
     }
