--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -18,7 +18,7 @@ body {
     background-color: black;
     height: 100vh;
     font-size: 2rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', "Open sans", sans-serif;
 }
 
 header {
@@ -51,7 +51,6 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
     font-size: 1.5rem;
     font-weight: bold;
     color: var(--primary-color);
@@ -251,6 +250,7 @@ label[for="menu-bar"]  {
 #adresse {
     width: 30%;
     margin-bottom: -5px;
+    margin-left: -50px;
 
 }
 
