--- a/style.css/program.css
+++ b/style.css/program.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 275vh;
+    height: 310vh;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -41,9 +41,11 @@ h1 {
 }
 
 p {
-    margin: 50px 100px;
+    margin: 50px 220px;
     font-size: 1.7rem;
     color: #000;
+    font-family: 'Roboto', "Open sans", sans-serif;
+    line-height: 1.8rem;
    
 
 }
@@ -156,6 +158,7 @@ label[for="menu-bar"]  {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 60px;
     border-top: 2px solid var(--primary-color);
 }
 
@@ -166,8 +169,9 @@ label[for="menu-bar"]  {
 }
 
 #adresse {
-    width: 30%;
+    width: 40%;
     margin-bottom: -5px;
+    margin-left: -50px;
 
 }
 
@@ -207,7 +211,7 @@ label[for="menu-bar"]  {
 
     .logo {
         position: absolute;
-        width: 180px;
+        width: 200px;
         height: auto;
         top: 17%;
         left: 50%;
@@ -215,70 +219,54 @@ label[for="menu-bar"]  {
     }
 
     h1 {
-        font-size: 4rem;
+        text-align: center;
+        margin-top: 250px;
+        font-size: 3rem;
+        
     }
     p {
-        color: var(--primary-color);
+        color: #000;
         text-align: start;
         font-size: 1.7rem;
-        margin: 20px 0;
+        margin: 40px 40px 80px 60px;
         font-weight: 500;
     }
-    .billede2 img {
+    
+    .event {
         width: 80%;
-        height: auto;
-      
     }
-
-    .nyhedsbrev {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    section.nyhedsb {
-        
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    form.nyhedsbrev input#email, input#fornavn {
-        display: block;
-        font-weight: bold;
-        min-height: 55px;
-        width: 546px;
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    label {
-        margin: 10px;
-        display: flex;
-    }
-    input#betingelser {
-        width: 5%;
-        margin-right: 20px;
-    }
+    
+    
 }
 
 @media (max-width: 809px) {
+
+    #program {
+        color: var(--primary-color);
+    }
    
-    main {
-        margin: 20px 100px;
+    body {
+        height: 540vh;
     }
     
+    
     h1 {
-        font-size: 3.7rem;
-        margin-top: 170px;
+        font-size: 3rem;
+        margin: 300px 40px 20px 40px;
+        text-align: center;
+        
     }
+
+    
+    
     header {
-        padding: 10px 20px 10px 0px;
+        padding: 10px 20px 10px 10px;
         display: flex;
         justify-content: end;
-        height: 80vh;
+      
         } 
 
-       
+    
                 
         header .navbar {
         display: none;
@@ -373,7 +361,12 @@ label[for="menu-bar"]  {
           
         }
         
-       
+        .event {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(2, auto);
+            margin-top: 30px;
+        }
         
     header .navbar ul li a:active + ul,
     header .navbar ul li a:focus + ul {
@@ -386,35 +379,24 @@ label[for="menu-bar"]  {
     }
                 
 
-    .nyhedsbrev {
-        margin: 10px;
-         }
-                    
-    form.nyhedsbrev input#email, input#fornavn {
-        display: block;
-        margin-bottom: 0px;
-        width: 400px;
-    }
-                
-                   
-
-    input#betingelser {
-        width: 12%;
-        margin-right: 20px;
-    }
-
-    .nyhedsbrev button {
-        margin-top: 0px;
+    p {
+        text-align: start;
+        font-size: 1.5rem;
+        margin: 25px 70px;
+        font-weight: 500;
+        line-break: auto;
     }
 
     }
 
     @media (max-width: 610px) {
    
-      
+        body {
+            height: 490vh;
+        }
         .footer {
       
-            margin: 0;
+            
             padding: 10px;
              }
                          
@@ -425,6 +407,7 @@ label[for="menu-bar"]  {
              #adresse {
              width: 40%;
              margin-top: -16px;
+             margin-left: 10px;
              }
                          
                          
@@ -437,83 +420,27 @@ label[for="menu-bar"]  {
  @media (max-width: 478px) {
    
     body {
-        background-image: url(../img/landingp.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-color: black;
-        width: 110%;
-        font-size: 1rem;
-        font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        height: 400vh;
     }
     
     main {
-        margin: 20px 60px;
+        margin: 20px 0px;
     }
     h1 {
         font-size: 2.7rem;
-        margin-top: 0px;
+        margin-top: 250px;
     }
 
-    h2, .nyhedsbrev h2 {
-        font-size: 2rem;
-        margin-bottom: 0px;
-    }
    
     p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         font-weight: 450;
-        margin-bottom: 0px;
-        margin-top: 0px;
+       
     }
    
-    .nyhedsbrev {
-    margin: 10px;
+    .event {
+        width: 70%;
     }
-                    
-        form.nyhedsbrev input#email, input#fornavn {
-        display: block;
-        margin-bottom: 0px;
-        font-weight: bold;
-        min-height: 70px;
-        width: 300px;
-        text-align: center;
-        font-size: 1.1rem;
-        border-radius: 10px;
-                        
-        }
-                
                    
 
-        input#betingelser {
-        width: 10%;
-        }
-
-        .betingelser p {
-            font-size: 1rem;
-            margin: 10px 0px;
-        }
-
-        #instaskrift {
-            margin-top: 100px;
-            margin-bottom: 0;
-        }
-
-       
-
-        section.instagram {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100vh;
-            text-align: center;
-        }
-        .instagram img {
-            width: 80%;
-            height: auto;
-            margin-top: 40px;
-        }
-    
-        
     }
