--- a/style.css/billet.css
+++ b/style.css/billet.css
@@ -249,7 +249,7 @@ label[for="menu-bar"]  {
 @media (max-width: 907px) {
 
     body {
-        height: 500vh;
+        height: 240vh;
     }
     header .navbar ul {
         list-style-type: none;
@@ -305,17 +305,21 @@ label[for="menu-bar"]  {
     }
    
     body {
-        height: 540vh;
+        height: 220vh;
     }
     
     
     h1 {
         font-size: 3rem;
-        margin: 300px 40px 20px 40px;
+        margin: 20px 40px 20px 40px;
         text-align: center;
         
     }
 
+    .koeb {
+        max-width: 500px;
+        margin-top: 250px;
+    }
     
     
     header {
@@ -446,6 +450,13 @@ label[for="menu-bar"]  {
         line-break: auto;
     }
 
+    #poster {
+        width: 60%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        margin-left: 102px;
+    }
+
     }
 
     @media (max-width: 610px) {
@@ -453,6 +464,29 @@ label[for="menu-bar"]  {
         body {
             height: 490vh;
         }
+
+            .koeb {
+                max-width: 379px;
+                height: auto;
+                margin-top: 250px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
+                text-align: center;
+            }
+
+            h2 {
+                text-align: center;
+                color: var(--primary-color);
+                font-size: 1.5rem;
+                margin: 15px 0;
+            }
+
+            select, button {
+                margin: 10px 0 0 50px;
+            }
+       
         .footer {
       
             
