--- a/style.css/kalender.css
+++ b/style.css/kalender.css
@@ -29,6 +29,9 @@ body {
     color: var(--secondary-color);
 }
 
+main {
+    margin: 20px 100px;
+}
 
 h1 {
     text-align: center;
@@ -37,13 +40,23 @@ h1 {
     font-size: 4rem;
 }
 
+
+p {
+    text-align: start;
+    font-size: 1.5rem;
+    margin: 40px 30px;
+    font-weight: 400;
+    line-break: auto;
+}
+
+
 .kalender {
     display: flex;
     justify-content: center;
 }
 
 .kalender img{
-    width: 50%;
+    width: 70%;
     height: auto;
 
 }
