--- a/style.css/kalender.css
+++ b/style.css/kalender.css
@@ -14,16 +14,19 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 275vh;
+    height: 320vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo {
     position: absolute;
-    width: 350px;
-    margin-left: 35rem;
-    
+    width: 300px;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
+
 
 #program {
     color: var(--secondary-color);
@@ -38,6 +41,8 @@ h1 {
     margin-top: 350px;
     color: var(--primary-color);
     font-size: 4rem;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    
 }
 
 
@@ -69,7 +74,6 @@ header .navbar ul {
     justify-content: space-around;
     
 }
-
 
 header .navbar ul li {
     position: relative;
@@ -136,7 +140,7 @@ header .navbar ul li:hover > ul {
     display: none;
 }
 
-header label {
+label[for="menu-bar"]  {
     font-size: 20px;
     color: #333;
     cursor: pointer;
@@ -144,11 +148,11 @@ header label {
 }
 
 .footer {
-    margin-top: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 60px;
     border-top: 2px solid var(--primary-color);
 }
 
@@ -159,8 +163,9 @@ header label {
 }
 
 #adresse {
-    width: 30%;
+    width: 40%;
     margin-bottom: -5px;
+    margin-left: -50px;
 
 }
 
@@ -168,6 +173,280 @@ header label {
 #insta {
     width: 100%;
     margin-left: -5px;
-    margin-top: 25px;
+   
 }
 
+
+@media (max-width: 907px) {
+    header .navbar ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 100%;
+   
+    }
+
+ 
+    header .navbar ul li {
+        position: relative;
+    }
+
+    header .navbar ul li a {
+        text-decoration: none;
+        display: block;
+        color: var(--primary-color);
+        font-weight: 1000;
+        font-size: 1.7rem;
+        white-space: nowrap;
+        
+      
+    }
+
+    .logo {
+        position: absolute;
+        width: 200px;
+        height: auto;
+        top: 17%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
+    }
+
+    h1 {
+        text-align: center;
+        margin-top: 250px;
+        font-size: 3rem;
+        
+    }
+    p {
+        color: #000;
+        text-align: start;
+        font-size: 1.7rem;
+        margin: 40px 40px 80px 60px;
+        font-weight: 500;
+    }
+
+    main {
+        margin: 192px 64px;
+    }
+    
+    .event {
+        width: 80%;
+    }
+    
+    body {
+        height: 330vh;
+    }
+    
+}
+
+@media (max-width: 809px) {
+
+    #program {
+        color: var(--primary-color);
+    }
+   
+    body {
+        height: 280vh;
+    }
+    
+    
+    h1 {
+        font-size: 3rem;
+        margin: 300px 40px 20px 40px;
+        text-align: center;
+        
+    }
+
+    
+    
+    header {
+        padding: 10px 20px 10px 10px;
+        display: flex;
+        justify-content: end;
+      
+        } 
+
+    
+                
+        header .navbar {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #0040ff;
+        width: 320px;
+        position: absolute;
+        top: 60px;
+        left: 10;
+        box-sizing: border-box;
+
+        }
+                
+        label[for="menu-bar"] {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;      
+                
+        }
+                
+        #menu-bar:checked ~ nav.navbar {
+        display: flex;
+       
+       
+        }
+                
+        .menubillede {
+        width: 50px;
+
+        }
+
+        header .navbar ul {
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            
+        }
+
+       
+        header .navbar ul li  {
+            position: relative;
+            width: 100%;
+            
+        }
+
+        header .navbar ul li a {
+            font-size: 2rem;
+            font-weight: 600;
+            padding: 25px;
+            text-align: center;
+            display: block;
+            box-sizing: border-box;
+            
+        }
+
+     
+
+        header .navbar ul li ul {
+            position: static;
+            display: none;
+            width: 100%;
+            background-color: var(--secondary-color);
+            margin: 0;
+            padding: 0;
+        
+        }
+        
+
+        header .navbar ul li a:hover {
+            background:var(--secondary-color);
+            color: var(--primary-color);
+            text-align: start;
+            width: 100%;
+            
+        }
+
+        
+        header .navbar ul li ul li a{
+            text-align: left;
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            margin: 0;
+        
+            
+          
+        }
+        
+        .event {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(2, auto);
+            margin-top: 30px;
+        }
+        
+    header .navbar ul li a:active + ul,
+    header .navbar ul li a:focus + ul {
+        display: block; /* Viser dropdown på klik i mobil */
+       
+    }
+
+    header .navbar ul li:hover > ul {
+        display: none; /* Hover er slået fra i mobilvisning */
+    }
+                
+
+    p {
+        text-align: start;
+        font-size: 1.5rem;
+        margin: 25px 70px;
+        font-weight: 500;
+        line-break: auto;
+    }
+
+    }
+
+    @media (max-width: 610px) {
+   
+        body {
+            height: 270vh;
+        }
+
+        p {
+            text-align: start;
+            font-size: 1.5rem;
+            margin: 25px 10px 25px 20px;
+            font-weight: 400;
+            line-break: auto;
+        }
+        .footer {
+      
+            
+            padding: 10px;
+             }
+                         
+             #logo {
+             display: none;
+             }
+                         
+             #adresse {
+             width: 40%;
+             margin-top: -16px;
+             margin-left: 10px;
+             }
+                         
+                         
+             #insta {
+             width: 100%;
+             }
+          
+       
+            }
+    
+ @media (max-width: 478px) {
+   
+    body {
+        height: 250vh;
+    }
+    
+    main {
+        margin: 20px 0px;
+    }
+    h1 {
+        font-size: 2.7rem;
+        margin-top: 250px;
+    }
+   
+    p {
+        font-size: 1.3rem;
+        font-weight: 450;
+        margin: 55px;
+    }
+   
+               
+
+    }
