--- a/style.css/program.css
+++ b/style.css/program.css
@@ -41,14 +41,14 @@ h1 {
 }
 
 p {
-    margin: 50px 220px;
-    font-size: 1.7rem;
-    color: #000;
-    font-family: 'Roboto', "Open sans", sans-serif;
-    line-height: 1.8rem;
-   
-
+    text-align: start;
+    font-size: 1.5rem;
+    margin: 40px 100px;
+    font-weight: 400;
+    line-break: auto;
 }
+
+
 
 h2 {
     text-align: center;
