--- a/style.css/oensk.css
+++ b/style.css/oensk.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 490vh;
+    height: 500vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -307,7 +307,7 @@ label[for="menu-bar"]  {
     h1 {
         text-align: center;
         margin-top: 250px;
-        font-size: 3rem;
+        font-size: 3.5rem;
         
     }
     p {
@@ -315,14 +315,26 @@ label[for="menu-bar"]  {
         text-align: start;
         font-size: 1.7rem;
         margin: 40px 40px 80px 60px;
-        font-weight: 500;
+        font-weight: 400;
+    }
+   
+    .tidligere {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        gap: 20px;
+        width: 95%;
+        margin: 0 auto;
+    }
+    body {
+        height: 600vh;
     }
     
-    .event {
-        width: 80%;
+    form.oensk h2 {
+        color: #000;
+        margin: 20px 0px;
+        font-size: 2.5rem;
     }
-    
-    
 }
 
 @media (max-width: 809px) {
