--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -175,6 +175,7 @@ header .navbar ul li a {
     color: var(--primary-color);
     font-size: 30px;
     font-weight: 1000;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
  
 }
 
