--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -29,7 +29,7 @@ body {
 
 
 main {
-    margin-top: 300px;
+    margin-top: 233px;
 }
 #program {
     color: var(--secondary-color);
@@ -312,7 +312,7 @@ label[for="menu-bar"]  {
         position: absolute;
         width: 200px;
         height: auto;
-        top: 17%;
+        top: 11%;
         left: 50%;
         transform: translate(-50%, -50%); 
     }
@@ -323,8 +323,35 @@ label[for="menu-bar"]  {
         font-size: 3rem;
         
     }
+
+    .billet {
+        font-size: 2.5rem;
+    }
+
+    .konkurrence h5 {
+        font-size: 1.8rem;
+        margin: 21px 125px;
+       
+    }
     
-    
+    .spotify a {
+        font-size: 2.5rem;
+    }
+
+    h5 {
+        font-size: 2.5rem;
+    }
+
+    h6 {
+        text-align: start;
+        font-size: 1.7rem;
+        margin: 60px 122px;
+        font-weight: 500;
+    }
+
+    body {
+        height: 365vh;
+    }
 }
 
 @media (max-width: 809px) {
@@ -334,16 +361,10 @@ label[for="menu-bar"]  {
     }
    
     body {
-        height: 540vh;
+        height: 330vh;
     }
     
-    
-    h1 {
-        font-size: 3rem;
-        margin: 300px 40px 20px 40px;
-        text-align: center;
-        
-    }
+
 
     
     
@@ -449,12 +470,6 @@ label[for="menu-bar"]  {
           
         }
         
-        .event {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(2, auto);
-            margin-top: 30px;
-        }
         
     header .navbar ul li a:active + ul,
     header .navbar ul li a:focus + ul {
@@ -471,8 +486,26 @@ label[for="menu-bar"]  {
         text-align: start;
         font-size: 1.5rem;
         margin: 25px 70px;
-        font-weight: 500;
+        font-weight: 400;
         line-break: auto;
+    }
+
+    .billet {
+        font-size: 2.2rem;
+    }
+
+    .konkurrence h5 {
+        font-size: 1.5rem;
+        margin: 21px 125px;
+    }
+    .spotify a {
+        font-size: 2rem;
+    }
+    h6 {
+        text-align: start;
+        font-size: 1.7rem;
+        margin: 35px 117px;
+        font-weight: 400;
     }
 
     }
