--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -22,8 +22,8 @@ body {
 }
 
 header {
-    position: relative; 
-    height: 100vh; 
+    position: relative;
+    height: 84vh;
 }
 
 .logo {
@@ -600,4 +600,31 @@ label[for="menu-bar"]  {
         }
     
         
+    }
+
+    @media (max-width: 1002px) {
+
+        header .navbar ul {
+            list-style-type: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            white-space: nowrap;
+        }
+
+        .nyhedsbrev {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: var(--primary-color);
+            margin-top: 31px;
+        }
+
+        p {
+            color: var(--primary-color);
+            text-align: start;
+            margin: 20px 0px;
+        }
     }
